--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -7,7 +7,7 @@
   "welcome_unlimited": "Regístrate es <b>fácil</b> y rádido",
   "quick_payments_title": "Recibe pagos: Fácil y rápido",
   "quick_payments_body": "Recibe tu dinero en minutos, <b>Unlimited</b> es la plataforma que impulsa tus negocio",
-  "welcome_home": "¡Bienvenidos a la comunidad Unlimited!",
+  "welcome_home": "¡Bienvenidos a Unlimited!",
   "email": "Correo electrónico",
   "buy": "Compra",
   "password": "Contraseña",
