--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -7,7 +7,7 @@
   "welcome_unlimited": "Join now, <b>it's free</b>",
   "quick_payments_title": "Get your money quick",
   "quick_payments_body": "Receive your money in minutes, <b>Unlimited</b> is the platform that drives your business",
-  "welcome_home": "Welcome to Unlimited's community!",
+  "welcome_home": "Welcome to Unlimited!",
   "email": "Email",
   "buy": "Buy",
   "password": "Password",
