--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -1,5 +1,5 @@
 {
-  "user_name": "Nombre de usuario",
+  "user_name": "Elige un usuario (ej: MrJuan, Pedro1)",
   "join_to_channel": "Únete al canal",
   "Unlimited_bot_telegram": "Bot de telegram bot Unlimited",
   "join_to_our_telegram_bot": "Unete ya a nuestro chat bot",
@@ -33,7 +33,7 @@
   "select_your_language": "Selecciona tu idioma",
   "select_your_country": "Selecciona tu país",
   "phone": "Teléfono",
-  "name": "Nombre",
+  "name": "Nombre y Apellido",
   "show": "Mostrar",
   "hide": "Ocultar",
   "again": "de nuevo",
