feat: home text

--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -65,5 +65,7 @@
   "join_on_project": "Únete al proyecto",
   "login_on_account": "Inicia sesión en tu cuenta",
   "discover_your_potential": "Descubre tu potencial",
-  "language": "Idioma"
+  "language": "Idioma",
+  "braek_lines" : "ROMPE BARRERAS",
+  "powerfull_to_break_lines" : "Tienes el poder. Vamos juntos a superar límites y alcanzar tus sueños."
 }
