--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -67,5 +67,7 @@
   "discover_your_potential": "Descubre tu potencial",
   "language": "Idioma",
   "braek_lines" : "ROMPE BARRERAS",
-  "powerfull_to_break_lines" : "Tienes el poder. Vamos juntos a superar límites y alcanzar tus sueños."
+  "powerfull_to_break_lines" : "Tienes el poder. Vamos juntos a superar límites y alcanzar tus sueños.",
+  "do_upgrade" : "Comprar",
+  "choose_item" : "Elegir Paquete"
 }
