--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -1,73 +1,89 @@
 {
-  "user_name": "Elige un usuario (ej: MrJuan, Pedro1)",
-  "join_to_channel": "Únete al canal",
-  "Disruptivo_bot_telegram": "Bot de telegram bot Disruptivo",
-  "join_to_our_telegram_bot": "Unete ya a nuestro chat bot",
-  "welcome_how_to_feel": "¿Como te sentirías si tuvieras más control sobre tu dinero?",
-  "welcome_Disruptivo": "Regístrate es <b>fácil</b> y rápido",
-  "quick_payments_title": "Recibe pagos: Fácil y rápido",
-  "quick_payments_body": "Recibe tu dinero en minutos, <b>Disruptivo</b> es la plataforma que impulsa tus negocio",
-  "welcome_home": "¡Bienvenidos a Disruptivo!",
-  "email": "Correo electrónico",
-  "buy": "Compra",
-  "password": "Contraseña",
-  "forgot_password": "¿Olvidaste tu contraseña?",
-  "remember": "Recordarme",
-  "signup_here": "Regístrate aquí",
-  "home": "Inicio",
-  "dont_have_account_yet": "¿No tienes una cuenta?",
-  "quick_integration_title": "Integralo en minutos",
+  "about_us": "Nosotros",
+  "accept": "Aceptar",
+  "address": "Dirección",
+  "again": "de nuevo",
+  "already_acocunt": "¿Ya tienes una cuenta?",
+  "amount_left": "Cantidad restante",
+  "braek_lines": "ROMPE BARRERAS",
   "businessman": "Empresario",
+  "buy": "Compra",
+  "check_out": "Pagar",
+  "choose_item": "Elegir Paquete",
+  "choose_payment_method": "Elegir método de pago",
+  "conditions": "Condiciones",
+  "confirmations": "Confirmaciones",
+  "copy": "Copiar",
+  "deleted": "Eliminado",
+  "discover_your_potential": "Descubre tu potencial",
+  "Disruptivo_bot_telegram": "Bot de telegram bot Disruptivo",
+  "do_upgrade": "Comprar",
+  "done": "Listo!",
+  "dont_have_account_yet": "¿No tienes una cuenta?",
+  "email": "Correo electrónico",
+  "factory_payments_body": "Desde tiendas en línea hasta plataformas o marketplaces, ofrecemos una gama completa de soluciones para todas tus necesidades de pago.",
+  "factory_payments_title": "Pagos para todas las empresas",
+  "filter": "Filter",
+  "forgot_password": "¿Olvidaste tu contraseña?",
+  "go_backoffice": "Ir a mi backoffice",
+  "go_to_payment": "Ir a pagar",
+  "hide": "Ocultar",
+  "home": "Inicio",
+  "how_make_payment": "<div><strong>Copia o escanea</strong> puedes copiar la dirección que aparece en la parte superior y enviarlo desde tu exchange preferida.</div><div><strong>Importante</strong> envía únicamente USDT.TRC20 (Red Tron) la cantidad exacta, si envías a cualquier red diferente tus fondos se perderán.</div>",
+  "how_make_payment_title": "¿Cómo realizar el pago?",
+  "important": "Importante",
+  "invoice": "Factura",
+  "invoice_tx": "Invoice tx",
+  "join_now": "Crear mi cuenta",
+  "join_on_project": "Únete al proyecto",
+  "join_to_channel": "Únete al canal",
+  "join_to_our_telegram_bot": "Unete ya a nuestro chat bot",
+  "language": "Idioma",
+  "login": "Ingresar",
+  "login_on_account": "Inicia sesión en tu cuenta",
+  "name": "Nombre y Apellido",
+  "not_enough_money": "Te envíaremos un mensaje o podrás enviar el restante a la dirección de arriba.",
+  "not_enough_money_title": "¿Cómo realizar el pago?",
+  "number_of_payment": "Número de pago",
+  "paid": "Pagado",
+  "password": "Contraseña",
+  "payment_address": "Dirección de pago",
+  "payment_method": "Método de pago",
+  "phone": "Teléfono",
+  "platform_body": "Acepta pagos y transfiere dinero a todo el mundo con las potentes API y soluciones de software de Disruptivo diseñadas para ayudarte a generar más ingresos.",
+  "platform_title": "Una plataforma completa de pagos diseñada para crecer",
+  "powerfull_to_break_lines": "Tienes el poder. Vamos juntos a superar límites y alcanzar tus sueños.",
+  "prices": "Precios",
+  "quick_integration_body": "Nuestras soluciones para todo tipo de empresas permiten que Capital Payments pueda integrarse en minutos.",
+  "quick_integration_title": "Integralo en minutos",
+  "quick_payments_body": "Recibe tu dinero en minutos, <b>Disruptivo</b> es la plataforma que impulsa tus negocio",
+  "quick_payments_title": "Recibe pagos: Fácil y rápido",
+  "quick_start_body": "Crea una cuenta en línea en pocos minutos y usa nuestras bibliotecas y SDK para aceptar pagos de manera segura. Depositaremos tus fondos directamente en tu Wallet fria o si lo prefieres a una wallet especifica.",
+  "quick_start_title": "Empieza en cuestión de minutos",
+  "remember": "Recordarme",
+  "sales_contact": "Contactactar con ventas",
+  "security_body": "Todos tus datos están protegidos porque están encriptados, sólo tu tienes el poder de utilizar tu dinero.",
+  "security_title": "Seguridad y crédibilidad",
+  "select": "Seleccionar",
+  "select_currency": "Seleccionar moneda",
+  "select_your_country": "Selecciona tu país",
+  "select_your_language": "Selecciona tu idioma",
+  "selected": "Seleccionado",
+  "sent_all_amount": "Asegúrate de enviar la cantidad exacta de <b>USDT.TRC20</b> tu orden de pago es",
+  "services": "¿Qué ofrecemos?",
+  "show": "Mostrar",
+  "signup": "Registrarme",
+  "signup_here": "Regístrate aquí",
+  "start_now": "Empezar ahora",
   "testimony": "Cree mi cuenta en Disruptivo, y ahora recibo mi dinero más rápido",
   "testimony_payments": "Tengo mi cuenta en Disruptivo, y ahora recibo mi dinero más rápido y sin KYC",
-  "quick_integration_body": "Nuestras soluciones para todo tipo de empresas permiten que Capital Payments pueda integrarse en minutos.",
-  "services": "¿Qué ofrecemos?",
-  "prices": "Precios",
-  "about_us": "Nosotros",
-  "go_backoffice": "Ir a mi backoffice",
-  "login": "Ingresar",
-  "signup": "Registrarme",
-  "amount_left": "Cantidad restante",
   "time_left": "Tiempo restante",
-  "invoice": "Factura",
-  "select_your_language": "Selecciona tu idioma",
-  "select_your_country": "Selecciona tu país",
-  "phone": "Teléfono",
-  "name": "Nombre y Apellido",
-  "show": "Mostrar",
-  "hide": "Ocultar",
-  "again": "de nuevo",
-  "join_now": "Crear mi cuenta",
-  "already_acocunt": "¿Ya tienes una cuenta?",
-  "sent_all_amount": "Asegúrate de enviar la cantidad exacta de <b>USDT.TRC20</b> tu orden de pago es",
-  "how_make_payment_title": "¿Cómo realizar el pago?",
-  "how_make_payment": "<div><strong>Copia o escanea</strong> puedes copiar la dirección que aparece en la parte superior y enviarlo desde tu exchange preferida.</div><div><strong>Importante</strong> envía únicamente USDT.TRC20 (Red Tron) la cantidad exacta, si envías a cualquier red diferente tus fondos se perderán.</div>",
-  "not_enough_money_title": "¿Cómo realizar el pago?",
-  "not_enough_money": "Te envíaremos un mensaje o podrás enviar el restante a la dirección de arriba.",
-  "paid": "Pagado",
-  "deleted": "Eliminado",
-  "invoice_tx": "Invoice tx",
-  "copy": "Copiar",
-  "done": "Listo!",
-  "address": "Dirección",
-  "sales_contact": "Contactactar con ventas",
-  "platform_title": "Una plataforma completa de pagos diseñada para crecer",
-  "platform_body": "Acepta pagos y transfiere dinero a todo el mundo con las potentes API y soluciones de software de Disruptivo diseñadas para ayudarte a generar más ingresos.",
-  "factory_payments_title": "Pagos para todas las empresas",
-  "factory_payments_body": "Desde tiendas en línea hasta plataformas o marketplaces, ofrecemos una gama completa de soluciones para todas tus necesidades de pago.",
-  "quick_start_title" : "Empieza en cuestión de minutos",
-  "quick_start_body" : "Crea una cuenta en línea en pocos minutos y usa nuestras bibliotecas y SDK para aceptar pagos de manera segura. Depositaremos tus fondos directamente en tu Wallet fria o si lo prefieres a una wallet especifica.",
-  "security_title" : "Seguridad y crédibilidad",
-  "security_body" : "Todos tus datos están protegidos porque están encriptados, sólo tu tienes el poder de utilizar tu dinero.",
-  "filter": "Filter",
-  "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo",
-  "start_now": "Empezar ahora",
-  "join_on_project": "Únete al proyecto",
-  "login_on_account": "Inicia sesión en tu cuenta",
-  "discover_your_potential": "Descubre tu potencial",
-  "language": "Idioma",
-  "braek_lines" : "ROMPE BARRERAS",
-  "powerfull_to_break_lines" : "Tienes el poder. Vamos juntos a superar límites y alcanzar tus sueños.",
-  "do_upgrade" : "Comprar",
-  "choose_item" : "Elegir Paquete"
+  "total": "Total",
+  "total_to_pay": "Total a pagar",
+  "user_name": "Elige un usuario (ej: MrJuan, Pedro1)",
+  "wait_payment": "Esperando pago",
+  "welcome_Disruptivo": "Regístrate es <b>fácil</b> y rápido",
+  "welcome_home": "¡Bienvenidos a Disruptivo!",
+  "welcome_how_to_feel": "¿Como te sentirías si tuvieras más control sobre tu dinero?",
+  "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo"
 }
