--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -87,5 +87,7 @@
   "welcome_how_to_feel": "¿Como te sentirías si tuvieras más control sobre tu dinero?",
   "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo",
   "email.welcome": "Bienvenido a Disruptivo, activa tu cuenta",
-  "email.academyPayment": "Bienvenido a Disruptivo" 
+  "email.academyPayment": "Bienvenido a Disruptivo",
+  "sponsor_not_active" : "Patrocinador no activo",
+  "do_you_want_to_continue" : "¿Deseas continuar?"
 }
