fix: update language

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,22 +1,23 @@
 {
   "about_us": "Nosotros",
-  "accept": "Accept",
+  "accept": "Aceptar",
   "address": "Dirección",
   "again": "de nuevo",
   "already_acocunt": "¿Ya tienes una cuenta?",
   "amount_left": "Cantidad restante",
+  "braek_lines": "ROMPE BARRERAS",
   "businessman": "Empresario",
   "buy": "Compra",
-  "check_out": "Check Out",
-  "choose_item": "Choose Package",
-  "choose_payment_method": "Choose Payment Method",
-  "conditions": "Conditions",
-  "confirmations": "Confirmations",
+  "check_out": "Pagar",
+  "choose_item": "Elegir Paquete",
+  "choose_payment_method": "Elegir método de pago",
+  "conditions": "Condiciones",
+  "confirmations": "Confirmaciones",
   "copy": "Copiar",
   "deleted": "Eliminado",
   "discover_your_potential": "Descubre tu potencial",
   "Disruptivo_bot_telegram": "Bot de telegram bot Disruptivo",
-  "do_upgrade": "Buy",
+  "do_upgrade": "Comprar",
   "done": "Listo!",
   "dont_have_account_yet": "¿No tienes una cuenta?",
   "email": "Correo electrónico",
@@ -25,12 +26,12 @@
   "filter": "Filter",
   "forgot_password": "¿Olvidaste tu contraseña?",
   "go_backoffice": "Ir a mi backoffice",
-  "go_to_payment": "Go to Payment",
+  "go_to_payment": "Ir a pagar",
   "hide": "Ocultar",
   "home": "Inicio",
   "how_make_payment": "<div><strong>Copia o escanea</strong> puedes copiar la dirección que aparece en la parte superior y enviarlo desde tu exchange preferida.</div><div><strong>Importante</strong> envía únicamente USDT.TRC20 (Red Tron) la cantidad exacta, si envías a cualquier red diferente tus fondos se perderán.</div>",
   "how_make_payment_title": "¿Cómo realizar el pago?",
-  "important": "Important",
+  "important": "Importante",
   "invoice": "Factura",
   "invoice_tx": "Invoice tx",
   "join_now": "Crear mi cuenta",
@@ -43,14 +44,15 @@
   "name": "Nombre y Apellido",
   "not_enough_money": "Te envíaremos un mensaje o podrás enviar el restante a la dirección de arriba.",
   "not_enough_money_title": "¿Cómo realizar el pago?",
-  "number_of_payment": "Number of Payment",
+  "number_of_payment": "Número de pago",
   "paid": "Pagado",
   "password": "Contraseña",
-  "payment_address": "Payment Address",
-  "payment_method": "Payment Method",
+  "payment_address": "Dirección de pago",
+  "payment_method": "Método de pago",
   "phone": "Teléfono",
   "platform_body": "Acepta pagos y transfiere dinero a todo el mundo con las potentes API y soluciones de software de Disruptivo diseñadas para ayudarte a generar más ingresos.",
   "platform_title": "Una plataforma completa de pagos diseñada para crecer",
+  "powerfull_to_break_lines": "Tienes el poder. Vamos juntos a superar límites y alcanzar tus sueños.",
   "prices": "Precios",
   "quick_integration_body": "Nuestras soluciones para todo tipo de empresas permiten que Capital Payments pueda integrarse en minutos.",
   "quick_integration_title": "Integralo en minutos",
@@ -62,11 +64,11 @@
   "sales_contact": "Contactactar con ventas",
   "security_body": "Todos tus datos están protegidos porque están encriptados, sólo tu tienes el poder de utilizar tu dinero.",
   "security_title": "Seguridad y crédibilidad",
-  "select": "Select",
-  "select_currency": "Select Currency",
+  "select": "Seleccionar",
+  "select_currency": "Seleccionar moneda",
   "select_your_country": "Selecciona tu país",
   "select_your_language": "Selecciona tu idioma",
-  "selected": "Selected",
+  "selected": "Seleccionado",
   "sent_all_amount": "Asegúrate de enviar la cantidad exacta de <b>USDT.TRC20</b> tu orden de pago es",
   "services": "¿Qué ofrecemos?",
   "show": "Mostrar",
@@ -77,13 +79,15 @@
   "testimony_payments": "Tengo mi cuenta en Disruptivo, y ahora recibo mi dinero más rápido y sin KYC",
   "time_left": "Tiempo restante",
   "total": "Total",
-  "total_to_pay": "Total to Pay",
+  "total_to_pay": "Total a pagar",
   "user_name": "Elige un usuario (ej: MrJuan, Pedro1)",
-  "wait_payment": "Waiting for payment",
+  "wait_payment": "Esperando pago",
   "welcome_Disruptivo": "Regístrate es <b>fácil</b> y rápido",
   "welcome_home": "¡Bienvenidos a Disruptivo!",
   "welcome_how_to_feel": "¿Como te sentirías si tuvieras más control sobre tu dinero?",
   "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo",
   "email.welcome": "Bienvenido a Disruptivo, activa tu cuenta",
-  "email.academyPayment": "Bienvenido a Disruptivo" 
+  "email.academyPayment": "Bienvenido a Disruptivo",
+  "sponsor_not_active" : "Patrocinador no activo",
+  "do_you_want_to_continue" : "¿Deseas continuar?"
 }
