fix: recover password

--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -87,9 +87,20 @@
   "welcome_how_to_feel": "¿Como te sentirías si tuvieras más control sobre tu dinero?",
   "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo",
   "email.welcome": "Bienvenido a Disruptivo, activa tu cuenta",
+  "email.recover_password": "Recupera tu contraseña",
+  "email.recover_password_text": "Hemos recibido una petición para recuperar contraseña de {{email}}. Para continuar por favor da clic en el siguiente enlace",
   "email.academyPayment": "Bienvenido a Disruptivo",
+  "email.team" : "Equipo",
   "sponsor_not_active" : "Patrocinador no activo",
   "do_you_want_to_continue" : "¿Deseas continuar?",
   "ticket_payment": "Ticket de pago",
+  "recover_password": "Recuperar contraseña",
+  "invalid_password": "Las contraseña indicada no es correcta. Intente nuevamente",
+  "not_found_mail": "El correo proporcionado no está registrado",
+  "invalid_credentials": "Las credenciales proporcionadas no son correctas, intente nuevamente",
+  "not_received_mail": "¿No recibiste el correo?",
+  "recover_password_mail": "Hemos enviado un correo a <b>%{email}</b> de que puedes ingresar a tu cuenta",
+  "not_received_mail_mail": "Si no recibiste el correo, revisa tu bandeja de spam o correos no deseados",
+  "warning": "Aviso",
   "important_message_pay": "Al dar clic en <strong>IR A PAGAR</strong> serás redirijido a otra páginas según el medio de pago. Si es la <strong>primera vez que realizas un pago como éste</strong>, es importante que <strong>leas las instrucciones</strong> antes de realizar el pago."
 }
