fix: add translations

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -91,5 +91,10 @@
   "sponsor_not_active" : "Patrocinador no activo",
   "do_you_want_to_continue" : "¿Deseas continuar?",
   "ticket_payment": "Ticket de pago",
-  "important_message_pay": "Al dar clic en <strong>IR A PAGAR</strong> serás redirijido a otra páginas según el medio de pago. Si es la <strong>primera vez que realizas un pago como éste</strong>, es importante que <strong>leas las instrucciones</strong> antes de realizar el pago."
+  "important_message_pay": "Al dar clic en <strong>IR A PAGAR</strong> serás redirijido a otra páginas según el medio de pago. Si es la <strong>primera vez que realizas un pago como éste</strong>, es importante que <strong>leas las instrucciones</strong> antes de realizar el pago.",
+  "recover_password": "Recuperar contraseña",
+  "recover_password_mail": "Hemos enviado un correo a <b>%{email}</b> de que puedes ingresar a tu cuenta",
+  "not_received_mail": "Si no recibiste el correo es que ya has recibido una notificación",
+  "not_received_mail_mail": "Si no recibiste el correo, revisa tu bandeja de spam o correos no deseados",
+  "warning": "Aviso"
 }
