fix: add correct translation

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,103 +1,106 @@
 {
-  "about_us": "Nosotros",
-  "accept": "Aceptar",
-  "address": "Dirección",
-  "again": "de nuevo",
-  "already_acocunt": "¿Ya tienes una cuenta?",
-  "amount_left": "Cantidad restante",
-  "braek_lines": "ROMPE BARRERAS",
-  "businessman": "Empresario",
-  "buy": "Compra",
-  "check_out": "Pagar",
-  "choose_item": "Elegir Paquete",
-  "choose_payment_method": "Elegir método de pago",
-  "conditions": "Condiciones",
-  "confirmations": "Confirmaciones",
-  "copy": "Copiar",
-  "deleted": "Eliminado",
-  "discover_your_potential": "Descubre tu potencial",
-  "Disruptivo_bot_telegram": "Bot de telegram bot Disruptivo",
-  "do_upgrade": "Comprar",
-  "done": "Listo!",
-  "dont_have_account_yet": "¿No tienes una cuenta?",
-  "email": "Correo electrónico",
-  "factory_payments_body": "Desde tiendas en línea hasta plataformas o marketplaces, ofrecemos una gama completa de soluciones para todas tus necesidades de pago.",
-  "factory_payments_title": "Pagos para todas las empresas",
+  "about_us": "About Us",
+  "accept": "Accept",
+  "address": "Address",
+  "again": "Again",
+  "already_acocunt": "Do you already have an account?",
+  "amount_left": "Amount Left",
+  "braek_lines": "BREAK BARRIERS",
+  "businessman": "Businessman",
+  "buy": "Buy",
+  "check_out": "Check Out",
+  "choose_item": "Choose Package",
+  "choose_payment_method": "Choose Payment Method",
+  "conditions": "Conditions",
+  "confirmations": "Confirmations",
+  "copy": "Copy",
+  "deleted": "Deleted",
+  "discover_your_potential": "Discover Your Potential",
+  "Disruptivo_bot_telegram": "Disruptivo Telegram Bot",
+  "do_upgrade": "Buy",
+  "do_you_want_to_continue": "Do you want to continue?",
+  "done": "Done!",
+  "dont_have_account_yet": "Don't have an account yet?",
+  "email": "Email",
+  "email.academyPayment": "Welcome to Disruptivo",
+  "email.recover_password": "Recover Your Password",
+  "email.recover_password_text": "We have received a request to recover the password for {{email}}. To continue, please click the following link",
+  "email.team": "Team",
+  "email.welcome": "Welcome to Disruptivo, activate your account",
+  "factory_payments_body": "From online stores to platforms or marketplaces, we offer a full range of solutions for all your payment needs.",
+  "factory_payments_title": "Payments for All Businesses",
   "filter": "Filter",
-  "forgot_password": "¿Olvidaste tu contraseña?",
-  "go_backoffice": "Ir a mi backoffice",
-  "go_to_payment": "Ir a pagar",
-  "hide": "Ocultar",
-  "home": "Inicio",
-  "how_make_payment": "<div><strong>Copia o escanea</strong> puedes copiar la dirección que aparece en la parte superior y enviarlo desde tu exchange preferida.</div><div><strong>Importante</strong> envía únicamente USDT.TRC20 (Red Tron) la cantidad exacta, si envías a cualquier red diferente tus fondos se perderán.</div>",
-  "how_make_payment_title": "¿Cómo realizar el pago?",
-  "important": "Importante",
-  "invoice": "Factura",
+  "forgot_password": "Forgot Your Password?",
+  "go_backoffice": "Go to My Backoffice",
+  "go_to_payment": "Go to Pay",
+  "hide": "Hide",
+  "home": "Home",
+  "how_make_payment": "<div><strong>Copy or scan</strong> You can copy the address that appears at the top and send it from your preferred exchange.</div><div><strong>Important</strong> Only send USDT.TRC20 (Tron Network) in the exact amount. If you send to any other network, your funds will be lost.</div>",
+  "how_make_payment_title": "How to Make the Payment?",
+  "important": "Important",
+  "important_message_pay": "By clicking on <strong>GO TO PAY</strong>, you will be redirected to another page depending on the payment method. If this is the <strong>first time you are making such a payment</strong>, it is important that you <strong>read the instructions</strong> before making the payment.",
+  "invalid_credentials": "The credentials provided are incorrect, please try again",
+  "invalid_password": "The password provided is incorrect. Please try again",
+  "invoice": "Invoice",
   "invoice_tx": "Invoice tx",
-  "join_now": "Crear mi cuenta",
-  "join_on_project": "Únete al proyecto",
-  "join_to_channel": "Únete al canal",
-  "join_to_our_telegram_bot": "Unete ya a nuestro chat bot",
-  "language": "Idioma",
-  "login": "Ingresar",
-  "login_on_account": "Inicia sesión en tu cuenta",
-  "name": "Nombre y Apellido",
-  "not_enough_money": "Te envíaremos un mensaje o podrás enviar el restante a la dirección de arriba.",
-  "not_enough_money_title": "¿Cómo realizar el pago?",
-  "number_of_payment": "Número de pago",
-  "paid": "Pagado",
-  "password": "Contraseña",
-  "payment_address": "Dirección de pago",
-  "payment_method": "Método de pago",
-  "phone": "Teléfono",
-  "platform_body": "Acepta pagos y transfiere dinero a todo el mundo con las potentes API y soluciones de software de Disruptivo diseñadas para ayudarte a generar más ingresos.",
-  "platform_title": "Una plataforma completa de pagos diseñada para crecer",
-  "powerfull_to_break_lines": "Tienes el poder. Vamos juntos a superar límites y alcanzar tus sueños.",
-  "prices": "Precios",
-  "quick_integration_body": "Nuestras soluciones para todo tipo de empresas permiten que Capital Payments pueda integrarse en minutos.",
-  "quick_integration_title": "Integralo en minutos",
-  "quick_payments_body": "Recibe tu dinero en minutos, <b>Disruptivo</b> es la plataforma que impulsa tus negocio",
-  "quick_payments_title": "Recibe pagos: Fácil y rápido",
-  "quick_start_body": "Crea una cuenta en línea en pocos minutos y usa nuestras bibliotecas y SDK para aceptar pagos de manera segura. Depositaremos tus fondos directamente en tu Wallet fria o si lo prefieres a una wallet especifica.",
-  "quick_start_title": "Empieza en cuestión de minutos",
-  "remember": "Recordarme",
-  "sales_contact": "Contactactar con ventas",
-  "security_body": "Todos tus datos están protegidos porque están encriptados, sólo tu tienes el poder de utilizar tu dinero.",
-  "security_title": "Seguridad y crédibilidad",
-  "select": "Seleccionar",
-  "select_currency": "Seleccionar moneda",
-  "select_your_country": "Selecciona tu país",
-  "select_your_language": "Selecciona tu idioma",
-  "selected": "Seleccionado",
-  "sent_all_amount": "Asegúrate de enviar la cantidad exacta de <b>USDT.TRC20</b> tu orden de pago es",
-  "services": "¿Qué ofrecemos?",
-  "show": "Mostrar",
-  "signup": "Registrarme",
-  "signup_here": "Regístrate aquí",
-  "start_now": "Empezar ahora",
-  "testimony": "Cree mi cuenta en Disruptivo, y ahora recibo mi dinero más rápido",
-  "testimony_payments": "Tengo mi cuenta en Disruptivo, y ahora recibo mi dinero más rápido y sin KYC",
-  "time_left": "Tiempo restante",
+  "join_now": "Create My Account",
+  "join_on_project": "Join the Project",
+  "join_to_channel": "Join the Channel",
+  "join_to_our_telegram_bot": "Join our chatbot now",
+  "language": "Language",
+  "login": "Log In",
+  "login_on_account": "Log in to your account",
+  "name": "Name and Surname",
+  "not_enough_money": "We will send you a message or you can send the remaining amount to the address above.",
+  "not_enough_money_title": "How to Make the Payment?",
+  "not_found_mail": "The provided email is not registered",
+  "not_received_mail": "Didn't receive the email?",
+  "not_received_mail_mail": "If you didn't receive the email, check your spam or junk mail folder",
+  "number_of_payment": "Payment Number",
+  "paid": "Paid",
+  "password": "Password",
+  "payment_address": "Payment Address",
+  "payment_method": "Payment Method",
+  "phone": "Phone",
+  "platform_body": "Accept payments and transfer money worldwide with Disruptivo's powerful APIs and software solutions designed to help you generate more revenue.",
+  "platform_title": "A Complete Payment Platform Designed to Grow",
+  "powerfull_to_break_lines": "You have the power. Let's break limits and achieve your dreams together.",
+  "prices": "Prices",
+  "quick_integration_body": "Our solutions for all types of businesses allow Capital Payments to be integrated in minutes.",
+  "quick_integration_title": "Integrate in Minutes",
+  "quick_payments_body": "Receive your money in minutes, <b>Disruptivo</b> is the platform that drives your business",
+  "quick_payments_title": "Receive Payments: Easy and Fast",
+  "quick_start_body": "Create an account online in minutes and use our libraries and SDK to securely accept payments. We will deposit your funds directly into your cold Wallet or, if you prefer, to a specific wallet.",
+  "quick_start_title": "Start in Minutes",
+  "recover_password": "Recover Password",
+  "recover_password_mail": "We have sent an email to <b>%{email}</b> that you can access your account",
+  "remember": "Remember Me",
+  "sales_contact": "Contact Sales",
+  "security_body": "All your data is protected because it is encrypted; only you have the power to use your money.",
+  "security_title": "Security and Credibility",
+  "select": "Select",
+  "select_currency": "Select Currency",
+  "select_your_country": "Select Your Country",
+  "select_your_language": "Select Your Language",
+  "selected": "Selected",
+  "sent_all_amount": "Make sure to send the exact amount of <b>USDT.TRC20</b> your payment order is",
+  "services": "What Do We Offer?",
+  "show": "Show",
+  "signup": "Sign Up",
+  "signup_here": "Sign Up Here",
+  "sponsor_not_active": "Inactive Sponsor",
+  "start_now": "Start Now",
+  "testimony": "I created my account at Disruptivo, and now I receive my money faster",
+  "testimony_payments": "I have my account at Disruptivo, and now I receive my money faster and without KYC",
+  "ticket_payment": "Payment Ticket",
+  "time_left": "Time Left",
   "total": "Total",
-  "total_to_pay": "Total a pagar",
-  "user_name": "Elige un usuario (ej: MrJuan, Pedro1)",
-  "wait_payment": "Esperando pago",
-  "welcome_Disruptivo": "Regístrate es <b>fácil</b> y rápido",
-  "welcome_home": "¡Bienvenidos a Disruptivo!",
-  "welcome_how_to_feel": "¿Como te sentirías si tuvieras más control sobre tu dinero?",
-  "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo",
-  "email.welcome": "Bienvenido a Disruptivo, activa tu cuenta",
-  "email.academyPayment": "Bienvenido a Disruptivo",
-  "sponsor_not_active" : "Patrocinador no activo",
-  "do_you_want_to_continue" : "¿Deseas continuar?",
-  "ticket_payment": "Ticket de pago",
-  "important_message_pay": "Al dar clic en <strong>IR A PAGAR</strong> serás redirijido a otra páginas según el medio de pago. Si es la <strong>primera vez que realizas un pago como éste</strong>, es importante que <strong>leas las instrucciones</strong> antes de realizar el pago.",
-  "recover_password": "Recuperar contraseña",
-  "recover_password_mail": "Hemos enviado un correo a <b>%{email}</b> de que puedes ingresar a tu cuenta",
-  "not_received_mail": "Si no recibiste el correo es que ya has recibido una notificación",
-  "not_received_mail_mail": "Si no recibiste el correo, revisa tu bandeja de spam o correos no deseados",
-  "warning": "Aviso",
-  "email.recover_password": "Recuperar contraseña",
-  "email.recover_password_text": "Hemos recibido una petición para recuperar contraseña de %{email}. Para continuar por favor da clic en el siguiente enlace",
-  "email.team" : "Equipo"
+  "total_to_pay": "Total to Pay",
+  "user_name": "Choose a Username (e.g., MrJuan, Pedro1)",
+  "wait_payment": "Waiting for Payment",
+  "warning": "Warning",
+  "welcome_Disruptivo": "Sign up is <b>easy</b> and fast",
+  "welcome_home": "Welcome to Disruptivo!",
+  "welcome_how_to_feel": "How would you feel if you had more control over your money?",
+  "whatsapp_default_message": "Hello! We are writing to you from Disruptivo"
 }
