--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -18,9 +18,15 @@
   "discover_your_potential": "Descubre tu potencial",
   "Disruptivo_bot_telegram": "Bot de telegram bot Disruptivo",
   "do_upgrade": "Comprar",
+  "do_you_want_to_continue": "¿Deseas continuar?",
   "done": "Listo!",
   "dont_have_account_yet": "¿No tienes una cuenta?",
   "email": "Correo electrónico",
+  "email.academyPayment": "Bienvenido a Disruptivo",
+  "email.recover_password": "Recupera tu contraseña",
+  "email.recover_password_text": "Hemos recibido una petición para recuperar contraseña de {{email}}. Para continuar por favor da clic en el siguiente enlace",
+  "email.team": "Equipo",
+  "email.welcome": "Bienvenido a Disruptivo, activa tu cuenta",
   "factory_payments_body": "Desde tiendas en línea hasta plataformas o marketplaces, ofrecemos una gama completa de soluciones para todas tus necesidades de pago.",
   "factory_payments_title": "Pagos para todas las empresas",
   "filter": "Filter",
@@ -32,6 +38,9 @@
   "how_make_payment": "<div><strong>Copia o escanea</strong> puedes copiar la dirección que aparece en la parte superior y enviarlo desde tu exchange preferida.</div><div><strong>Importante</strong> envía únicamente USDT.TRC20 (Red Tron) la cantidad exacta, si envías a cualquier red diferente tus fondos se perderán.</div>",
   "how_make_payment_title": "¿Cómo realizar el pago?",
   "important": "Importante",
+  "important_message_pay": "Al dar clic en <strong>IR A PAGAR</strong> serás redirijido a otra páginas según el medio de pago. Si es la <strong>primera vez que realizas un pago como éste</strong>, es importante que <strong>leas las instrucciones</strong> antes de realizar el pago.",
+  "invalid_credentials": "Las credenciales proporcionadas no son correctas, intente nuevamente",
+  "invalid_password": "Las contraseña indicada no es correcta. Intente nuevamente",
   "invoice": "Factura",
   "invoice_tx": "Invoice tx",
   "join_now": "Crear mi cuenta",
@@ -44,6 +53,9 @@
   "name": "Nombre y Apellido",
   "not_enough_money": "Te envíaremos un mensaje o podrás enviar el restante a la dirección de arriba.",
   "not_enough_money_title": "¿Cómo realizar el pago?",
+  "not_found_mail": "El correo proporcionado no está registrado",
+  "not_received_mail": "¿No recibiste el correo?",
+  "not_received_mail_mail": "Si no recibiste el correo, revisa tu bandeja de spam o correos no deseados",
   "number_of_payment": "Número de pago",
   "paid": "Pagado",
   "password": "Contraseña",
@@ -60,6 +72,8 @@
   "quick_payments_title": "Recibe pagos: Fácil y rápido",
   "quick_start_body": "Crea una cuenta en línea en pocos minutos y usa nuestras bibliotecas y SDK para aceptar pagos de manera segura. Depositaremos tus fondos directamente en tu Wallet fria o si lo prefieres a una wallet especifica.",
   "quick_start_title": "Empieza en cuestión de minutos",
+  "recover_password": "Recuperar contraseña",
+  "recover_password_mail": "Hemos enviado un correo a <b>%{email}</b> de que puedes ingresar a tu cuenta",
   "remember": "Recordarme",
   "sales_contact": "Contactactar con ventas",
   "security_body": "Todos tus datos están protegidos porque están encriptados, sólo tu tienes el poder de utilizar tu dinero.",
@@ -74,33 +88,19 @@
   "show": "Mostrar",
   "signup": "Registrarme",
   "signup_here": "Regístrate aquí",
+  "sponsor_not_active": "Patrocinador no activo",
   "start_now": "Empezar ahora",
   "testimony": "Cree mi cuenta en Disruptivo, y ahora recibo mi dinero más rápido",
   "testimony_payments": "Tengo mi cuenta en Disruptivo, y ahora recibo mi dinero más rápido y sin KYC",
+  "ticket_payment": "Ticket de pago",
   "time_left": "Tiempo restante",
   "total": "Total",
   "total_to_pay": "Total a pagar",
   "user_name": "Elige un usuario (ej: MrJuan, Pedro1)",
   "wait_payment": "Esperando pago",
+  "warning": "Aviso",
   "welcome_Disruptivo": "Regístrate es <b>fácil</b> y rápido",
   "welcome_home": "¡Bienvenidos a Disruptivo!",
   "welcome_how_to_feel": "¿Como te sentirías si tuvieras más control sobre tu dinero?",
-  "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo",
-  "email.welcome": "Bienvenido a Disruptivo, activa tu cuenta",
-  "email.recover_password": "Recupera tu contraseña",
-  "email.recover_password_text": "Hemos recibido una petición para recuperar contraseña de {{email}}. Para continuar por favor da clic en el siguiente enlace",
-  "email.academyPayment": "Bienvenido a Disruptivo",
-  "email.team" : "Equipo",
-  "sponsor_not_active" : "Patrocinador no activo",
-  "do_you_want_to_continue" : "¿Deseas continuar?",
-  "ticket_payment": "Ticket de pago",
-  "recover_password": "Recuperar contraseña",
-  "invalid_password": "Las contraseña indicada no es correcta. Intente nuevamente",
-  "not_found_mail": "El correo proporcionado no está registrado",
-  "invalid_credentials": "Las credenciales proporcionadas no son correctas, intente nuevamente",
-  "not_received_mail": "¿No recibiste el correo?",
-  "recover_password_mail": "Hemos enviado un correo a <b>%{email}</b> de que puedes ingresar a tu cuenta",
-  "not_received_mail_mail": "Si no recibiste el correo, revisa tu bandeja de spam o correos no deseados",
-  "warning": "Aviso",
-  "important_message_pay": "Al dar clic en <strong>IR A PAGAR</strong> serás redirijido a otra páginas según el medio de pago. Si es la <strong>primera vez que realizas un pago como éste</strong>, es importante que <strong>leas las instrucciones</strong> antes de realizar el pago."
+  "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo"
 }
