--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -102,5 +102,6 @@
   "welcome_Disruptivo": "Regístrate es <b>fácil</b> y rápido",
   "welcome_home": "¡Bienvenidos a Disruptivo!",
   "welcome_how_to_feel": "¿Como te sentirías si tuvieras más control sobre tu dinero?",
-  "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo"
+  "whatsapp_default_message": "¡Hola! te escribimos desde Disruptivo",
+  "already_have_package" : "Ya tienes éste paquete"
 }
